js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-return-await-import-call-unknown.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
await
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
)
